--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "cd server && node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5"
