fix issues with dotenv

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5"
   }
 }
