--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "dotenv": "^16.3.1",
+    "firebase": "^10.11.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
