--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.11.1",
     "mongoose": "^8.2.4",
     "node-cron": "^3.0.3"
   },
